kubernetes/dashboard/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: galactica.local
    http:
      paths:
        - path: /dashboard(/|$)(.*)
          backend:
            serviceName: kubernetes-dashboard
            servicePort: 443
